# Simple-shell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Calculator.sln  LICENSE  README.md  Simple-shell.sln  Simple-shell.sln.DotSettings  appveyor.yml  setup.iss
01 test/: 01 test.cpp  01 test.vcxproj  01 test.vcxproj.filters  1.txt  pch.cpp  pch.h
Calculator/: Calculator.cbp  Calculator.cpp  Calculator.def  Calculator.depend  Calculator.h  Calculator.layout  Calculator.vcxproj  Calculator.vcxproj.filters  Header.h  Memory.h  Platform.h  Token.cpp  Token.h  Token_stream.cpp  Token_stream.h  Variable.cpp  Variable.h  calc-3.x.cpp  library.h  main.cpp  version.h
Calculator caller/: Calculator caller.cbp  Calculator caller.cpp  Calculator caller.layout  Calculator caller.vcxproj  Calculator caller.vcxproj.filters  Calculator_caller.cpp  Header.h  stdafx.cpp  stdafx.h
Class Projects/Crossing/: Array_2D.cpp  Array_2D.h  CMakeLists.txt  Colors.cpp  Colors.h  Crossing.cpp  Crossing.h  Crossing.vcxproj  Crossing.vcxproj.filters  Header.h  main.cpp  main.h  main_functions.cpp
CmdTreeGen/: CmdTreeGen.cpp  CmdTreeGen.vcxproj  CmdTreeGen.vcxproj.filters  cmd_struct.h
Console Calculator/: Calculator.cpp  Calculator.h  Console Calculator.vcxproj  Console Calculator.vcxproj.filters  Exports.def  Memory.h  Platform.h  Token.h  Token_stream.cpp  Token_stream.h  Variable.cpp  Variable.h  calc-3.x.cbp  calc-3.x.depend  calc-3.x.layout
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  stdafx.h
Host/: Filemani.cpp  Filemani.h  Header.cpp  Header.h  Host.cpp  (+25 more)
(+232 files in other folders)
