cmake_minimum_required(VERSION 3.9)
project(Crossing)

set(CMAKE_CXX_STANDARD 11)

add_executable(Crossing
        Array_2D.cpp
        Array_2D.h
        Colors.cpp
        Colors.h
        Header.h
        main.cpp
        main.h
        Crossing.cpp
        Crossing.h
        main_functions.cpp)
